# acerola_jam

./: .gitignore  Cargo.toml  build.rs
assets/: Bfxr.exe - Shortcut.lnk  Piskel-0.14.0.exe - Shortcut.lnk  PlayerBottom.piskel  PlayerBottomIdle.piskel  PlayerBottomRun.piskel  PlayerTop.piskel  PlayerTopDead.piskel  PlayerTopFinish.piskel  PlayerTopIdle.piskel  PlayerTopSlash.piskel  manifest.rc  unready
src/: bushido.rs  main.rs  notes.txt
src/bushido/: enemy.rs  menu.rs  particle.rs  particles.rs  player.rs
wix/: main.wxs
