[package]
name = "acerola_jam"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", features = ["mp3"]  }
bevy_cursor = "0.3.0"
bevy_embedded_assets = "0.10.0"
bevy_hanabi = "0.10.0"
bitflags = "2.4.2"
leafwing-input-manager = "0.13.3"
winit = "0.29.14"

[dev-dependencies]
bevy = { version = "0.13.0", features = ["mp3", "dynamic_linking"] }

[build-dependencies]
embed-resource = "2.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[package.metadata.bundle]
name = "Bushido Blazer"
icon = ["assets/icon.png"]
description = "For Acerola Jam 0!"
